pve-manager (8.2.6-1) bookworm; urgency=medium

  * 同步：合并主库,同步更新版本号为8.2.6-1
 
  * 更改：添加依赖检查

  * 更改：调整窗体高度为700px，相等于性能窗体340px+5px+5px+10px+340px
  
  * 更改：切换镜像源默认为非企业源，使用中科大源作为镜像
 
  * 更改：调整ceph源为默认非企业源，使用中科大作为镜像

  * 更改：调整lxc容器镜像对站点命名，修改为host1，host2以此类推

  * 更改：调整初始化lxc镜像数据脚本，使其对应为host1，host2格式

  * 更改：调整工作流中安装的软件包，使其在无环境设备中，成功构建该deb

  * 更改：调整版本控制哈希为7字符显示，同步GitHub显示

 -- Proxmox Support Team <ymwlpoolc@qq.com>  Sat, 21 Sep 2024 20:42:25 +0800

pve-manager (8.2.5-2) bookworm; urgency=medium

  * 修正风扇转速传感器监控

  * 修正NVME传感器监控

  * 初步通配传感器，将版本号增加1
  
  * 修正CPU温度的通配支持

  * 解决因传感器返回空值时候导致界面显示连接中的bug

  * 调整组件大小，给增加行列留出显示空间

  * 修复容器模板源加载问题，lxc源调整到中科大
  
  * 添加主板温度显示支持

 -- Proxmox Support Team <ymwlpoolc@qq.com>  Fri, 20 Sep 2024 18:28:11 +0800

pve-manager (8.2.5-1) bookworm; urgency=medium

  * 将8.2.4-1版本中的更改合并进入8.2.5

  * 合并主库

  * 同步变更日志，更新版本号为8.2.5-1
  
 -- Proxmox Support Team <ymwlpoolc@qq.com>  Tue, 17 Sep 2024 11:33:54 +0800
 

pve-manager (8.2.6) bookworm; urgency=medium

  * fix #5731: vzdump jobs: fix execution of converted jobs

 -- Proxmox Support Team <support@proxmox.com>  Fri, 20 Sep 2024 17:47:17 +0200


pve-manager (8.2.5) bookworm; urgency=medium

  * ui: qemu hardware: use background delay for asynchronous remove tasks so
    that the task log window doesn't get shown if the task already finished.

  * ui: qemu hardware: use asynchronous remove API call for disk hot-unplug to
    expand the task duration timeout from 30 seconds to 10 minutes, helping
    overloaded and/or slow systems.

  * vzdump config: add fleecing property string to make it clear that fleecing
    can be configured as a node-wide default too.

  * ui: fix align mode of the two-column container widget, which is used for
    the advanced tab of the backup job edit window.

  * vzdump: fix unit for bandwidth limit in log message, it's in KiB (base 2)
    not KB (base 10)

  * pve7to8: allow one to run arbitrary newer Proxmox kernels after upgrade
