@@ -18,7 +18,9 @@ pve-manager (8.2.6-1) bookworm; urgency=medium
 
   * 更改：调整版本控制哈希为7字符显示，同步GitHub显示
 
- -- Proxmox Support Team <ymwlpoolc@qq.com>  Sat, 21 Sep 2024 20:42:25 +0800
+  * 更改：修复移动版管理页面加载问题，bug内容https://bugzilla.proxmox.com/show_bug.cgi?id=5734
+
+ -- Proxmox Support Team <ymwlpoolc@qq.com>  Mon, 23 Sep 2024 20:42:46 +0800
 
 pve-manager (8.2.5-2) bookworm; urgency=medium
 
